# invest-mbti-test

./: .gitignore  CLAUDE.md  granite.config.ts  index.html  package-lock.json  package.json  pencil-new.pen
docs/: 01-개발-스펙.md  02-TDS-디자인-가이드.md  03-정책-심사기준.md
project/address-converter/: PLANNING.md
project/aed-finder/: PLANNING.md
project/barcode-generator/: PLANNING.md
project/carbon-tracker/: PLANNING.md
project/ev-charger/: PLANNING.md
project/free-events/: PLANNING.md
project/hot-now/: PLANNING.md
project/hot-now/server/: .env.example  .gitignore  pyproject.toml
project/hot-now/server/src/: main.py
project/hot-now/server/src/common/: config.py  db.py  logger.py
project/hot-now/server/src/crawlers/: __init__.py  base.py  google_trends_global.py  google_trends_kr.py  google_trends_rss.py  google_trends_rss_global.py  naver_datalab.py  naver_searchad.py
project/hot-now/server/src/pipeline/: classifier.py  llm.py  normalizer.py  sensitivity.py  summarizer.py
project/hot-now/server/src/scheduler/: main.py
project/hot-now/server/src/scoring/: calculator.py  change_detector.py
project/hot-now/server/supabase/: schema.sql
project/hot-now/server/supabase/.temp/: pooler-url  project-ref
project/hot-now/server/supabase/functions/trending/: index.ts
project/hot-now/server/supabase/functions/trending-detail/: index.ts
project/hot-now/server/supabase/migrations/: 20260314000001_rls_write.sql
project/invest-like-me/: 기획문서.md
project/kids-zone/: PLANNING.md
project/night-pharmacy/: PLANNING.md
src/: App.tsx  index.css
(+326 files in other folders)
