[project]
name = "hot-now-server"
version = "0.1.0"
description = "핫나우 — 실시간 트렌드 수집·분석 백엔드"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "aiolimiter>=1.2.1",
    "anthropic>=0.84.0",
    "apscheduler>=3.11.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytrends>=4.9.2",
    "structlog>=25.5.0",
    "supabase>=2.28.0",
]

[project.scripts]
hot-now = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
